# till_linkedIn_fixes_job_search

./: .env.bkp  README.md  operate.py  pyproject.toml  test.py  test2.py
agent_trial2/: hats.py  team.py  tools.py
agent_trial2/test/: pydantic_model.py
agent_trials/core/agents/: worker2.py  worker_agent.py
agent_trials/org/: dummy_agent.py  trial_org.py
agent_trials3/: base_agent.py  hats.py  test.py
agent_trials3/displays/: console_based.py  pygame_based.py  streamlit_based.py
config/: jd_temp.txt  master_cv.txt  master_cv_config.yaml  settings.yaml
config/orgs/: agent.yaml  comparison_tabular_format.md  jobsearch.yaml
docs/: Application_tracking.md  spec_doc.md
extension/chrome/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
extension/chrome/common/: api.js  ui.js
extension/chrome/options/: options.html  options.js
extension/chrome/popup/: popup.html  popup.js
extension/chrome/tabs/: jd.js  profile.js
framework/: cv_builder.py
framework/bookkeepers/: job_applications.py
framework/connecters/notion/: connector.py
framework/core/: brains.py  config_manager.py
